--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 **/migrations/*.py
 !**/migrations/__init__.py
 
-src/media/*
-!src/media/*
+src/media/**/*
+!src/media/**/*/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
